# brrr

./: .gitignore  README.md  brrr-integration.test.nix  brrr_demo.py  flake.nix  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yaml  pr.yaml
canvas/: abstract-task.ts  demo.ts  impl.ts  type.ts
nix/: check-build-all.nix
nix-flake-check-changed/: nix-flake-check-changed.sh  package.nix
python/: package.nix  pyproject.toml
python/src/brrr/: __init__.py  brrr.py  naive_codec.py  store.py
python/tests/: test_brrr.py  test_spawn_limit.py
src/: brrr.ts  per-task-encoder.ts
src/brrr/: __init__.py  brrr.py  call.py  codec.py  compat.py  naive_codec.py  queue.py  store.py
src/brrr/backends/: dynamo.py  in_memory.py  redis.py  sqs.py
tests/: closable_test_queue.py  contract_queue.py  contract_store.py  store_contract.py  test_brrr.py  test_codec.py  test_dynamo.py  test_in_memory_queue.py  test_queue.py  test_spawn_limit.py  test_store.py
ts/: .gitignore  biome.json  package-lock.json  package.json  tsconfig.json
ts/src/: brrr.ts  index.ts  types.ts  wrrrker.ts
ts/src/adapters/: dynamo-store.ts  in-memory-queue.ts  in-memory-store.ts  redis-queue.ts
ts/src/codecs/: naive-codec.ts
ts/src/core/: brrr.ts  wrrrker.ts
ts/src/libs/: error.ts  types.ts
ts/src/models/: cache.ts  call.ts  codec.ts  defer.ts  memory.ts  pending-returns.ts  queue.ts  store.ts  task.ts
ts/test/: brrr.ts  spawn-limit.ts  tsconfig.json
ts/test/codecs/: naive-codec.ts
ts/test/fixtures/: closable-mem-queue.ts  in-memory-queue.ts  in-memory-store.ts  (+2 more)
(+3 files in other folders)
