[tool.poetry]
name = "brrr"
version = "0.1.0"
description = ""
authors = [
    "Robin <robin.lewis@anterior.com>",
    "Jesse Zwaan <j.k.zwaan@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.54"
boto3-stubs = "^1.35.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
